добавила в табы контент, чтобы не дергалась страница при отстутствии прокрутки

--- a/static/index.html
+++ b/static/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/main.css?t=1684130656412">
-    <script src="js/main.js?t=1684130656412" defer></script>
+    <link rel="stylesheet" href="css/main.css?t=1684132440118">
+    <script src="js/main.js?t=1684132440118" defer></script>
 </head>
 
 <body>
@@ -298,10 +298,272 @@
                 </div>
             </div>
             <div class="tabs__container" data-tab="tab2">
-                2
+                <div class="best-deal swiper js-simple-slider">
+                    <div class="swiper-wrapper best-deal__wrapper">
+                        <div class="swiper-slide best-deal__item">
+                            <div class="best-deal__hover">
+                                <div class="hover-bg"></div>
+                                <div class="hover-content">
+                                    Контент при наведении
+                                </div>
+                            </div>
+                            <div class="best-deal__img">
+                                <img src="./img/card-img_4.png" alt="img">
+                            </div>
+                            <div class="best-deal__content">
+                                <h3 class="best-deal__name"></h3>
+                                <p class="best-deal__description"></p>
+                            </div>
+                            <div class="sizes">
+                                <div class="sizes__wrapper">
+                                    <div class="size">
+                                        <input type="radio" id="size_1" class="size__input" name="size">
+                                        <label for="size_1" class="size__label">44</label>
+                                    </div>
+                                    <div class="size">
+                                        <input type="radio" id="size_2" class="size__input" name="size">
+                                        <label for="size_2" class="size__label">46</label>
+                                    </div>
+                                    <div class="size">
+                                        <input type="radio" id="size_3" class="size__input" name="size">
+                                        <label for="size_3" class="size__label">48</label>
+                                    </div>
+                                    <h3 class="sizes__title">Размер</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide best-deal__item">
+                            <div class="best-deal__hover">
+                                <div class="hover-bg"></div>
+                                <div class="hover-content">
+                                    Контент при наведении
+                                </div>
+                            </div>
+                            <div class="best-deal__img">
+                                <img src="./img/card-img_3.png" alt="img">
+                            </div>
+                            <div class="best-deal__content">
+                                <h3 class="best-deal__name"></h3>
+                                <p class="best-deal__description"></p>
+                                <div class="sizes">
+                                    <div class="sizes__wrapper">
+                                        <div class="size">
+                                            <input type="radio" id="size_1" class="size__input" name="size">
+                                            <label for="size_1" class="size__label">44</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_2" class="size__input" name="size">
+                                            <label for="size_2" class="size__label">46</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_3" class="size__input" name="size">
+                                            <label for="size_3" class="size__label">48</label>
+                                        </div>
+                                        <h3 class="sizes__title">Размер</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide best-deal__item">
+                            <div class="best-deal__hover">
+                                <div class="hover-bg"></div>
+                                <div class="hover-content">
+                                    Контент при наведении
+                                </div>
+                            </div>
+                            <div class="best-deal__img">
+                                <img src="./img/card-img_2.png" alt="img">
+                            </div>
+                            <div class="best-deal__content">
+                                <h3 class="best-deal__name"></h3>
+                                <p class="best-deal__description"></p>
+                                <div class="sizes">
+                                    <div class="sizes__wrapper">
+                                        <div class="size">
+                                            <input type="radio" id="size_1" class="size__input" name="size">
+                                            <label for="size_1" class="size__label">44</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_2" class="size__input" name="size">
+                                            <label for="size_2" class="size__label">46</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_3" class="size__input" name="size">
+                                            <label for="size_3" class="size__label">48</label>
+                                        </div>
+                                        <h3 class="sizes__title">Размер</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide best-deal__item">
+                            <div class="best-deal__hover">
+                                <div class="hover-bg"></div>
+                                <div class="hover-content">
+                                    Контент при наведении
+                                </div>
+                            </div>
+                            <div class="best-deal__img">
+                                <img src="./img/card-img_1.png" alt="img">
+                            </div>
+                            <div class="best-deal__content">
+                                <h3 class="best-deal__name"></h3>
+                                <p class="best-deal__description"></p>
+                                <div class="sizes">
+                                    <div class="sizes__wrapper">
+                                        <div class="size">
+                                            <input type="radio" id="size_1" class="size__input" name="size">
+                                            <label for="size_1" class="size__label">44</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_2" class="size__input" name="size">
+                                            <label for="size_2" class="size__label">46</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_3" class="size__input" name="size">
+                                            <label for="size_3" class="size__label">48</label>
+                                        </div>
+                                        <h3 class="sizes__title">Размер</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="tabs__container" data-tab="tab3">
-                3
+                <div class="best-deal swiper js-simple-slider">
+                    <div class="swiper-wrapper best-deal__wrapper">
+                        <div class="swiper-slide best-deal__item">
+                            <div class="best-deal__hover">
+                                <div class="hover-bg"></div>
+                                <div class="hover-content">
+                                    Контент при наведении
+                                </div>
+                            </div>
+                            <div class="best-deal__img">
+                                <img src="./img/card-img_3.png" alt="img">
+                            </div>
+                            <div class="best-deal__content">
+                                <h3 class="best-deal__name"></h3>
+                                <p class="best-deal__description"></p>
+                            </div>
+                            <div class="sizes">
+                                <div class="sizes__wrapper">
+                                    <div class="size">
+                                        <input type="radio" id="size_1" class="size__input" name="size">
+                                        <label for="size_1" class="size__label">44</label>
+                                    </div>
+                                    <div class="size">
+                                        <input type="radio" id="size_2" class="size__input" name="size">
+                                        <label for="size_2" class="size__label">46</label>
+                                    </div>
+                                    <div class="size">
+                                        <input type="radio" id="size_3" class="size__input" name="size">
+                                        <label for="size_3" class="size__label">48</label>
+                                    </div>
+                                    <h3 class="sizes__title">Размер</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide best-deal__item">
+                            <div class="best-deal__hover">
+                                <div class="hover-bg"></div>
+                                <div class="hover-content">
+                                    Контент при наведении
+                                </div>
+                            </div>
+                            <div class="best-deal__img">
+                                <img src="./img/card-img_1.png" alt="img">
+                            </div>
+                            <div class="best-deal__content">
+                                <h3 class="best-deal__name"></h3>
+                                <p class="best-deal__description"></p>
+                                <div class="sizes">
+                                    <div class="sizes__wrapper">
+                                        <div class="size">
+                                            <input type="radio" id="size_1" class="size__input" name="size">
+                                            <label for="size_1" class="size__label">44</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_2" class="size__input" name="size">
+                                            <label for="size_2" class="size__label">46</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_3" class="size__input" name="size">
+                                            <label for="size_3" class="size__label">48</label>
+                                        </div>
+                                        <h3 class="sizes__title">Размер</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide best-deal__item">
+                            <div class="best-deal__hover">
+                                <div class="hover-bg"></div>
+                                <div class="hover-content">
+                                    Контент при наведении
+                                </div>
+                            </div>
+                            <div class="best-deal__img">
+                                <img src="./img/card-img_2.png" alt="img">
+                            </div>
+                            <div class="best-deal__content">
+                                <h3 class="best-deal__name"></h3>
+                                <p class="best-deal__description"></p>
+                                <div class="sizes">
+                                    <div class="sizes__wrapper">
+                                        <div class="size">
+                                            <input type="radio" id="size_1" class="size__input" name="size">
+                                            <label for="size_1" class="size__label">44</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_2" class="size__input" name="size">
+                                            <label for="size_2" class="size__label">46</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_3" class="size__input" name="size">
+                                            <label for="size_3" class="size__label">48</label>
+                                        </div>
+                                        <h3 class="sizes__title">Размер</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide best-deal__item">
+                            <div class="best-deal__hover">
+                                <div class="hover-bg"></div>
+                                <div class="hover-content">
+                                    Контент при наведении
+                                </div>
+                            </div>
+                            <div class="best-deal__img">
+                                <img src="./img/card-img_4.png" alt="img">
+                            </div>
+                            <div class="best-deal__content">
+                                <h3 class="best-deal__name"></h3>
+                                <p class="best-deal__description"></p>
+                                <div class="sizes">
+                                    <div class="sizes__wrapper">
+                                        <div class="size">
+                                            <input type="radio" id="size_1" class="size__input" name="size">
+                                            <label for="size_1" class="size__label">44</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_2" class="size__input" name="size">
+                                            <label for="size_2" class="size__label">46</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_3" class="size__input" name="size">
+                                            <label for="size_3" class="size__label">48</label>
+                                        </div>
+                                        <h3 class="sizes__title">Размер</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
