--- a/app/html/blocks/tabs-section.html
+++ b/app/html/blocks/tabs-section.html
@@ -141,10 +141,272 @@
                 </div>
             </div>
             <div class="tabs__container" data-tab="tab2">
-                2
+                <div class="best-deal swiper js-simple-slider">
+                    <div class="swiper-wrapper best-deal__wrapper">
+                        <div class="swiper-slide best-deal__item">
+                            <div class="best-deal__hover">
+                                <div class="hover-bg"></div>
+                                <div class="hover-content">
+                                    Контент при наведении
+                                </div>
+                            </div>
+                            <div class="best-deal__img">
+                                <img src="./img/card-img_4.png" alt="img">
+                            </div>
+                            <div class="best-deal__content">
+                                <h3 class="best-deal__name"></h3>
+                                <p class="best-deal__description"></p>
+                            </div>
+                            <div class="sizes">
+                                <div class="sizes__wrapper">
+                                    <div class="size">
+                                        <input type="radio" id="size_1" class="size__input" name="size">
+                                        <label for="size_1" class="size__label">44</label>
+                                    </div>
+                                    <div class="size">
+                                        <input type="radio" id="size_2" class="size__input" name="size">
+                                        <label for="size_2" class="size__label">46</label>
+                                    </div>
+                                    <div class="size">
+                                        <input type="radio" id="size_3" class="size__input" name="size">
+                                        <label for="size_3" class="size__label">48</label>
+                                    </div>
+                                    <h3 class="sizes__title">Размер</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide best-deal__item">
+                            <div class="best-deal__hover">
+                                <div class="hover-bg"></div>
+                                <div class="hover-content">
+                                    Контент при наведении
+                                </div>
+                            </div>
+                            <div class="best-deal__img">
+                                <img src="./img/card-img_3.png" alt="img">
+                            </div>
+                            <div class="best-deal__content">
+                                <h3 class="best-deal__name"></h3>
+                                <p class="best-deal__description"></p>
+                                <div class="sizes">
+                                    <div class="sizes__wrapper">
+                                        <div class="size">
+                                            <input type="radio" id="size_1" class="size__input" name="size">
+                                            <label for="size_1" class="size__label">44</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_2" class="size__input" name="size">
+                                            <label for="size_2" class="size__label">46</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_3" class="size__input" name="size">
+                                            <label for="size_3" class="size__label">48</label>
+                                        </div>
+                                        <h3 class="sizes__title">Размер</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide best-deal__item">
+                            <div class="best-deal__hover">
+                                <div class="hover-bg"></div>
+                                <div class="hover-content">
+                                    Контент при наведении
+                                </div>
+                            </div>
+                            <div class="best-deal__img">
+                                <img src="./img/card-img_2.png" alt="img">
+                            </div>
+                            <div class="best-deal__content">
+                                <h3 class="best-deal__name"></h3>
+                                <p class="best-deal__description"></p>
+                                <div class="sizes">
+                                    <div class="sizes__wrapper">
+                                        <div class="size">
+                                            <input type="radio" id="size_1" class="size__input" name="size">
+                                            <label for="size_1" class="size__label">44</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_2" class="size__input" name="size">
+                                            <label for="size_2" class="size__label">46</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_3" class="size__input" name="size">
+                                            <label for="size_3" class="size__label">48</label>
+                                        </div>
+                                        <h3 class="sizes__title">Размер</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide best-deal__item">
+                            <div class="best-deal__hover">
+                                <div class="hover-bg"></div>
+                                <div class="hover-content">
+                                    Контент при наведении
+                                </div>
+                            </div>
+                            <div class="best-deal__img">
+                                <img src="./img/card-img_1.png" alt="img">
+                            </div>
+                            <div class="best-deal__content">
+                                <h3 class="best-deal__name"></h3>
+                                <p class="best-deal__description"></p>
+                                <div class="sizes">
+                                    <div class="sizes__wrapper">
+                                        <div class="size">
+                                            <input type="radio" id="size_1" class="size__input" name="size">
+                                            <label for="size_1" class="size__label">44</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_2" class="size__input" name="size">
+                                            <label for="size_2" class="size__label">46</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_3" class="size__input" name="size">
+                                            <label for="size_3" class="size__label">48</label>
+                                        </div>
+                                        <h3 class="sizes__title">Размер</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="tabs__container" data-tab="tab3">
-                3
+                <div class="best-deal swiper js-simple-slider">
+                    <div class="swiper-wrapper best-deal__wrapper">
+                        <div class="swiper-slide best-deal__item">
+                            <div class="best-deal__hover">
+                                <div class="hover-bg"></div>
+                                <div class="hover-content">
+                                    Контент при наведении
+                                </div>
+                            </div>
+                            <div class="best-deal__img">
+                                <img src="./img/card-img_3.png" alt="img">
+                            </div>
+                            <div class="best-deal__content">
+                                <h3 class="best-deal__name"></h3>
+                                <p class="best-deal__description"></p>
+                            </div>
+                            <div class="sizes">
+                                <div class="sizes__wrapper">
+                                    <div class="size">
+                                        <input type="radio" id="size_1" class="size__input" name="size">
+                                        <label for="size_1" class="size__label">44</label>
+                                    </div>
+                                    <div class="size">
+                                        <input type="radio" id="size_2" class="size__input" name="size">
+                                        <label for="size_2" class="size__label">46</label>
+                                    </div>
+                                    <div class="size">
+                                        <input type="radio" id="size_3" class="size__input" name="size">
+                                        <label for="size_3" class="size__label">48</label>
+                                    </div>
+                                    <h3 class="sizes__title">Размер</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide best-deal__item">
+                            <div class="best-deal__hover">
+                                <div class="hover-bg"></div>
+                                <div class="hover-content">
+                                    Контент при наведении
+                                </div>
+                            </div>
+                            <div class="best-deal__img">
+                                <img src="./img/card-img_1.png" alt="img">
+                            </div>
+                            <div class="best-deal__content">
+                                <h3 class="best-deal__name"></h3>
+                                <p class="best-deal__description"></p>
+                                <div class="sizes">
+                                    <div class="sizes__wrapper">
+                                        <div class="size">
+                                            <input type="radio" id="size_1" class="size__input" name="size">
+                                            <label for="size_1" class="size__label">44</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_2" class="size__input" name="size">
+                                            <label for="size_2" class="size__label">46</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_3" class="size__input" name="size">
+                                            <label for="size_3" class="size__label">48</label>
+                                        </div>
+                                        <h3 class="sizes__title">Размер</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide best-deal__item">
+                            <div class="best-deal__hover">
+                                <div class="hover-bg"></div>
+                                <div class="hover-content">
+                                    Контент при наведении
+                                </div>
+                            </div>
+                            <div class="best-deal__img">
+                                <img src="./img/card-img_2.png" alt="img">
+                            </div>
+                            <div class="best-deal__content">
+                                <h3 class="best-deal__name"></h3>
+                                <p class="best-deal__description"></p>
+                                <div class="sizes">
+                                    <div class="sizes__wrapper">
+                                        <div class="size">
+                                            <input type="radio" id="size_1" class="size__input" name="size">
+                                            <label for="size_1" class="size__label">44</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_2" class="size__input" name="size">
+                                            <label for="size_2" class="size__label">46</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_3" class="size__input" name="size">
+                                            <label for="size_3" class="size__label">48</label>
+                                        </div>
+                                        <h3 class="sizes__title">Размер</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide best-deal__item">
+                            <div class="best-deal__hover">
+                                <div class="hover-bg"></div>
+                                <div class="hover-content">
+                                    Контент при наведении
+                                </div>
+                            </div>
+                            <div class="best-deal__img">
+                                <img src="./img/card-img_4.png" alt="img">
+                            </div>
+                            <div class="best-deal__content">
+                                <h3 class="best-deal__name"></h3>
+                                <p class="best-deal__description"></p>
+                                <div class="sizes">
+                                    <div class="sizes__wrapper">
+                                        <div class="size">
+                                            <input type="radio" id="size_1" class="size__input" name="size">
+                                            <label for="size_1" class="size__label">44</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_2" class="size__input" name="size">
+                                            <label for="size_2" class="size__label">46</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_3" class="size__input" name="size">
+                                            <label for="size_3" class="size__label">48</label>
+                                        </div>
+                                        <h3 class="sizes__title">Размер</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
