feat: add search and basket counter

--- a/app/html/blocks/catalog-section.html
+++ b/app/html/blocks/catalog-section.html
@@ -1,4 +1,4 @@
-<section class="catalog-section">
+<section class="catalog-section top-60">
     <div class="container">
         <div class="catalog-section__wrapper">
             <article class="banner">
