--- a/app/html/blocks/header.html
+++ b/app/html/blocks/header.html
@@ -44,10 +44,21 @@
                     <svg with="20" height="20" class="basket-link__icon">
                         <use xlink:href="img/icons/sprite.svg#basket"></use>
                     </svg>
+                    <div class="counter">
+                        0
+                    </div>
                 </a>
                 <div class="menu-btn">
                     <span></span><span></span><span></span>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="search-block">
+        <div class="container">
+            <div class="search-block__wrapper">
+                <input type="search" class="search-block__input">
+                <button class="search-block__button">Искать</button>
             </div>
         </div>
     </div>
