--- a/app/html/blocks/tabs-section.html
+++ b/app/html/blocks/tabs-section.html
@@ -20,24 +20,35 @@
                                 <img src="./img/card-img_1.png" alt="img">
                             </div>
                             <div class="best-deal__content">
-                                <h3 class="best-deal__name"></h3>
-                                <p class="best-deal__description"></p>
+                                <h3 class="best-deal__name">Кожаная юбка</h3>
+                                <p class="best-deal__description">Описание: Полосатая кофта из полосатого трикотажа, без
+                                    молнии</p>
                             </div>
-                            <div class="sizes">
-                                <div class="sizes__wrapper">
-                                    <div class="size">
-                                        <input type="radio" id="size_1" class="size__input" name="size">
-                                        <label for="size_1" class="size__label">44</label>
-                                    </div>
-                                    <div class="size">
-                                        <input type="radio" id="size_2" class="size__input" name="size">
-                                        <label for="size_2" class="size__label">46</label>
-                                    </div>
-                                    <div class="size">
-                                        <input type="radio" id="size_3" class="size__input" name="size">
-                                        <label for="size_3" class="size__label">48</label>
+                            <div class="best-deal__controls">
+                                <div class="sizes">
+                                    <div class="sizes__wrapper">
+                                        <div class="size">
+                                            <input type="radio" id="size_1" class="size__input" name="size">
+                                            <label for="size_1" class="size__label">44</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_2" class="size__input" name="size">
+                                            <label for="size_2" class="size__label">46</label>
+                                        </div>
+                                        <div class="size">
+                                            <input type="radio" id="size_3" class="size__input" name="size">
+                                            <label for="size_3" class="size__label">48</label>
+                                        </div>
                                     </div>
                                     <h3 class="sizes__title">Размер</h3>
+                                </div>
+                                <div class="price">
+                                    <div class="cost">790</div>
+                                    <button class="add-to-basket">
+                                        <svg with="20" height="20" class="add-to-basket__icon">
+                                            <use xlink:href="img/icons/sprite.svg#basket"></use>
+                                        </svg>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -52,8 +63,11 @@
                                 <img src="./img/card-img_2.png" alt="img">
                             </div>
                             <div class="best-deal__content">
-                                <h3 class="best-deal__name"></h3>
-                                <p class="best-deal__description"></p>
+                                <h3 class="best-deal__name">Кожаная юбка</h3>
+                                <p class="best-deal__description">Описание: Полосатая кофта из полосатого трикотажа, без
+                                    молнии</p>
+                            </div>
+                            <div class="best-deal__controls">
                                 <div class="sizes">
                                     <div class="sizes__wrapper">
                                         <div class="size">
@@ -68,8 +82,17 @@
                                             <input type="radio" id="size_3" class="size__input" name="size">
                                             <label for="size_3" class="size__label">48</label>
                                         </div>
-                                        <h3 class="sizes__title">Размер</h3>
                                     </div>
+                                    <h3 class="sizes__title">Размер</h3>
+                                </div>
+                                <div class="price">
+                                    <div class="sale-cost">1199</div>
+                                    <div class="cost">790</div>
+                                    <button class="add-to-basket">
+                                        <svg with="20" height="20" class="add-to-basket__icon">
+                                            <use xlink:href="img/icons/sprite.svg#basket"></use>
+                                        </svg>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -84,8 +107,11 @@
                                 <img src="./img/card-img_3.png" alt="img">
                             </div>
                             <div class="best-deal__content">
-                                <h3 class="best-deal__name"></h3>
-                                <p class="best-deal__description"></p>
+                                <h3 class="best-deal__name">Кожаная юбка</h3>
+                                <p class="best-deal__description">Описание: Полосатая кофта из полосатого трикотажа, без
+                                    молнии</p>
+                            </div>
+                            <div class="best-deal__controls">
                                 <div class="sizes">
                                     <div class="sizes__wrapper">
                                         <div class="size">
@@ -100,8 +126,17 @@
                                             <input type="radio" id="size_3" class="size__input" name="size">
                                             <label for="size_3" class="size__label">48</label>
                                         </div>
-                                        <h3 class="sizes__title">Размер</h3>
                                     </div>
+                                    <h3 class="sizes__title">Размер</h3>
+                                </div>
+                                <div class="price">
+                                    <div class="sale-cost">1199</div>
+                                    <div class="cost">790</div>
+                                    <button class="add-to-basket">
+                                        <svg with="20" height="20" class="add-to-basket__icon">
+                                            <use xlink:href="img/icons/sprite.svg#basket"></use>
+                                        </svg>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -116,8 +151,11 @@
                                 <img src="./img/card-img_4.png" alt="img">
                             </div>
                             <div class="best-deal__content">
-                                <h3 class="best-deal__name"></h3>
-                                <p class="best-deal__description"></p>
+                                <h3 class="best-deal__name">Кожаная юбка</h3>
+                                <p class="best-deal__description">Описание: Полосатая кофта из полосатого трикотажа, без
+                                    молнии</p>
+                            </div>
+                            <div class="best-deal__controls">
                                 <div class="sizes">
                                     <div class="sizes__wrapper">
                                         <div class="size">
@@ -132,8 +170,17 @@
                                             <input type="radio" id="size_3" class="size__input" name="size">
                                             <label for="size_3" class="size__label">48</label>
                                         </div>
-                                        <h3 class="sizes__title">Размер</h3>
                                     </div>
+                                    <h3 class="sizes__title">Размер</h3>
+                                </div>
+                                <div class="price">
+                                    <div class="sale-cost">1199</div>
+                                    <div class="cost">790</div>
+                                    <button class="add-to-basket">
+                                        <svg with="20" height="20" class="add-to-basket__icon">
+                                            <use xlink:href="img/icons/sprite.svg#basket"></use>
+                                        </svg>
+                                    </button>
                                 </div>
                             </div>
                         </div>
